# noctalia-dropdown-terminal

./: LICENSE  Panel.qml  README.md  Settings.qml  default.nix  flake.nix  manifest.json  module.nix  result
src/: CMakeLists.txt  ORIGIN  plugin.cpp  ptyiface.cpp  ptyiface.h  textrender.cpp  textrender.h  vtermbridge.cpp  vtermbridge.h
